[project]
name = "DecisionTracker"
version = "1.0.0"
requires-python = ">=3.9"

[tool.pytest.ini_options]
pythonpath = "src/"
testpaths = ["tests/"]

[tool.ruff]
src = ["src/"]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "N", "DTZ", "RUF", "PERF"]

[tool.poetry.dependencies]
sqlalchemy = "^2.0.41"
pytest = "^8.4.1"
pytest-postgresql = "^7.0.2"
psycopg2-binary = "^2.9.10"
